# debugging_workshop

.docker/: image_name
example1/: CMakeLists.txt
example1/finished/: CMakeLists.txt
example1/src/: main.cpp
example2/: CMakeLists.txt  build.sh  run.sh
example2/src/: main.cpp
example3/: CMakeLists.txt
example3/finished/src/: main.cpp
example3/src/: main.cpp
